--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.21.8",
     "babel-eslint": "^10.1.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-json": "^3.1.0",
